Feature: header e navbar terminados, adicionados pastas css e img, adicionados arquivo style.css e imagens para o projeto

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
     <title>Primeiro desafio Academy</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav class="navbar">
+                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <a href="#" class="btnTry">Try It Free</a>
+            </nav>
+            <div class="ctnMSG">
+                <div class="headerMSG">
+                    <h1>Build The Community<br>
+                    Yout Fans Will Love</h1>
+                    <p>
+                        Huddle re-iamgines the way we build communities. You have a voice,
+                        but so does your audience. Create connections with your users as you
+                        engage in genuine discussion.
+                    </p>
+                    <a class="btnGetStarted" href="#">Get Started For Free</a>
+                </div>
+                <div class="headerIMG">
+                    <img src="img/illustration-mockups.svg" alt="mockup">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
