Feature: adicionado seção de cards ao html e adicionado estilos no css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Primeiro desafio Academy</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <nav class="navbar">
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
@@ -33,5 +33,50 @@
             </div>
         </div>
     </header>
+    <section id="cardsSection">
+       <div class="container">
+            <div class="cards">
+                <div class="cardFlex">
+                    <div class="cardMSG">
+                        <h2>Grow Together</h2>
+                        <p>
+                            Generate meaningful discussions with your audience
+                            and a strong, loyal community. Thing of the insightful
+                            conversations you miss out on with feedback form.
+                        </p>
+                    </div>
+                    <div class="cardIMG">
+                        <img src="img/illustration-grow-together.svg" alt="Crescendo juntos">
+                    </div>
+                </div>
+                <div class="cardFlex">
+                    <div class="cardIMG">
+                        <img src="img/illustration-flowing-conversation.svg" alt="Crescendo juntos">
+                    </div>
+                    <div class="cardMSG">
+                        <h2>Flowing Conversation</h2>
+                        <p>
+                            You wouldn't paginate a conversation in real life, so
+                            why do it online? Our thread have just-in-time loading
+                            for a more natural flow.
+                        </p>
+                    </div>
+                </div>
+                <div class="cardFlex">
+                    <div class="cardMSG">
+                        <h2>Your Users</h2>
+                        <p>
+                            It takes no time altt to integrate Hunddle with your app's
+                            authentication solution. This means, once signed in to
+                            your app, your users can start catting immediately.
+                        </p>
+                    </div>
+                    <div class="cardIMG">
+                        <img src="img/illustration-your-users.svg" alt="Crescendo juntos">
+                    </div>
+                </div>
+            </div>
+       </div> 
+    </section>
 </body>
 </html>
