Feature: adicionado card ready to build e adicionado estilos a ele

--- a/index.html
+++ b/index.html
@@ -78,5 +78,15 @@
             </div>
        </div> 
     </section>
+    <section id="cardReadyToBuild">
+        <div class="container">
+            <div class="cardContainer">
+                <div class="card">
+                    <h2>Ready To Build Your Community?</h2>
+                    <a class="btnGetStarted" href="#">Get Started For Free</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
