Feature: Adicionado e quase finalizado footer

--- a/index.html
+++ b/index.html
@@ -88,5 +88,37 @@
             </div>
         </div>
     </section>
+    <footer id="footer">
+        <div class="container">
+            <div class="contFlex">
+                <div class="contact">
+                    <a href="#"><img src="img/logo.svg" alt="logo" class="footerLogo"></a>
+                                <i><img src="img/icon-location.svg" alt="map"></i>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa laboriosam porro
+                                    maiores reprehenderit quam perferendis nobis! Incidunt molestias sint nostrum
+                                </p>
+                    <i><img src="img/icon-phone.svg" alt=""></i>
+                    <p>+55 62 9 9999-9999</p>
+                    <i><img src="img/icon-email.svg" alt=""></i>
+                    <p>devalisson@itsmail.com</p>
+                </div>
+                <div class="usefulLinks">
+                    <a href="#">About us</a>
+                    <a href="#">What whe do</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">Career</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact us</a>
+                </div>
+                <div class="socialMedias">
+                    <a href="#">F</a>
+                    <a href="#">T</a>
+                    <a href="#">I</a>
+                    <p class="copy">&copy Copyright 2008 Huddle. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
