--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
     <title>Primeiro desafio Academy</title>
 </head>
 <body>
+    <!--header section-->
     <header id="header">
         <div class="container">
             <nav class="navbar">
@@ -33,6 +36,9 @@
             </div>
         </div>
     </header>
+    <!--end header section-->
+
+    <!--cards section-->
     <section id="cardsSection">
        <div class="container">
             <div class="cards">
@@ -78,6 +84,9 @@
             </div>
        </div> 
     </section>
+    <!--end cards section-->
+
+    <!--card upside footer section-->
     <section id="cardReadyToBuild">
         <div class="container">
             <div class="cardContainer">
@@ -88,37 +97,74 @@
             </div>
         </div>
     </section>
+    <!--end card upside footer section-->
+
+    <!--footer section-->
     <footer id="footer">
-        <div class="container">
-            <div class="contFlex">
-                <div class="contact">
-                    <a href="#"><img src="img/logo.svg" alt="logo" class="footerLogo"></a>
-                                <i><img src="img/icon-location.svg" alt="map"></i>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa laboriosam porro
-                                    maiores reprehenderit quam perferendis nobis! Incidunt molestias sint nostrum
-                                </p>
-                    <i><img src="img/icon-phone.svg" alt=""></i>
+        <div class="container contFlex">
+            <!--first col footer section-->
+            <div class="logo">
+                <a href="#"><img src="img/logo.svg" alt="logo" class="footerLogo"></a>
+            </div>
+
+            <div class="footerCol">
+                <div class="footerItem">
+                    <img src="img/icon-location.svg" alt="map">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa laboriosam porro
+                        maiores reprehenderit quam perferendis nobis! Incidunt molestias sint nostrum
+                    </p>
+                </div>
+                <div class="footerItem">
+                    <img src="img/icon-phone.svg" alt="">
                     <p>+55 62 9 9999-9999</p>
-                    <i><img src="img/icon-email.svg" alt=""></i>
+                </div>
+                <div class="footerItem">
+                    <img src="img/icon-email.svg" alt="">
                     <p>devalisson@itsmail.com</p>
                 </div>
-                <div class="usefulLinks">
-                    <a href="#">About us</a>
-                    <a href="#">What whe do</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">Career</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Contact us</a>
+            </div>
+            <!--end first col footer section-->
+
+            <!--second col footer section-->
+            <div class="footerCol">
+                <div class="footerItem half">
+                    <a href="#">About Us</a>
                 </div>
-                <div class="socialMedias">
-                    <a href="#">F</a>
-                    <a href="#">T</a>
-                    <a href="#">I</a>
-                    <p class="copy">&copy Copyright 2008 Huddle. All rights reserved.</p>
+                <div class="footerItem half">
+                    <a href="#">What We Do</a>
+                </div>
+                <div class="footerItem half">
+                    <a href="#">FAQ</a>
+                </div>
+                <div class="footerItem half">
+                    <a href="#">Career</a>
+                </div>
+                <div class="footerItem half">
+                    <a href="#">Blog</a>
+                </div>
+                <div class="footerItem half">
+                    <a href="#">Contact Us</a>
                 </div>
             </div>
+            <!--end second col footer section-->
+
+            <!--third second col footer section-->
+            <div class="footerCol">
+                <div class="alignLeft">
+                    <div class="footerItem">
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+                    <div class="footerItem">
+                        <p class="copy">&copy Copyright</p>
+                    </div>
+                </div>
+            </div>
+            <!--end third second col footer section-->
         </div>
     </footer>
+    <!--end footer section-->
 </body>
 </html>
