Chore: alterado um comentário

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <!--end second col footer section-->
 
-            <!--third second col footer section-->
+            <!--third col footer section-->
             <div class="footerCol">
                 <div class="alignLeft">
                     <div class="footerItem">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <!--end third second col footer section-->
+            <!--end third col footer section-->
         </div>
     </footer>
     <!--end footer section-->
